--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,9 +51,12 @@
   --card-foreground: oklch(0.18 0.02 260);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.18 0.02 260);
-  --primary: oklch(0.25 0.03 260); /* Deep navy */
+  /* --primary: oklch(0.25 0.03 260); /* Deep navy */
+  --primary: oklch(0.1964 0.0956 264.12);
   --primary-foreground: oklch(0.98 0.01 260);
-  --secondary: oklch(0.75 0.02 250); /* Cool soft blue */
+  /* --secondary: oklch(0.75 0.02 250); /* Cool soft blue */
+  /* --secondary: oklch(0.7868 0.0419 250.01); /* Soft navy */
+  --secondary: oklch(0.95 0.01 264); /* Soft navy */
   --secondary-foreground: oklch(0.18 0.02 260);
   --muted: oklch(0.9 0.01 250);
   --muted-foreground: oklch(0.45 0.01 260);
@@ -183,5 +186,12 @@
 
   .animate-loading-bar {
     animation: loading-bar 1.2s ease-in-out infinite;
+  }
+
+  .bg-lines {
+    background-image: url("/bg-lines.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.05;
   }
 }
