--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,4 +195,71 @@
     background-repeat: no-repeat;
     opacity: 0.05;
   }
+
+  @keyframes fade-in-down {
+    from {
+      transform: translateY(-120px);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-in-down {
+    animation: fade-in-down 1.3s ease-out both;
+  }
+
+  .delay-100 {
+    animation-delay: 0.8s;
+  }
+
+  @keyframes fade-in-up {
+    from {
+      transform: translateY(120px);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-in-up {
+    animation: fade-in-up 1.3s ease-out both;
+  }
+
+  .delay-100 {
+    animation-delay: 0.8s;
+  }
+
+  @keyframes fade-right {
+    from {
+      transform: translateX(600px);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-right {
+    animation: fade-right 1.3s ease-out both;
+  }
+  .delay-100 {
+    animation-delay: 0.8s;
+  }
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .animate-fade-in {
+    animation: fade-in 2.3s ease-out both;
+  }
+
+  .delay-200 {
+    animation-delay: 1.4s;
+  }
 }
