--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,10 +215,10 @@
 
   @keyframes fade-in-up {
     from {
-      transform: translate(-50%, 120px);
+      opacity: 0;
     }
     to {
-      transform: translate(-50%, 0);
+      opacity: 1;
     }
   }
 
